@@ -26,11 +26,14 @@ void INP2Q(void *ckt, INPtables * tab, card * current, void *gnode)
     char *nname2;		/* the second node's name */
     char *nname3;		/* the third node's name */
     char *nname4;		/* the fourth node's name */
+    char *nname5;		/* the fifth node's name */
     void *node1;		/* the first node's node pointer */
     void *node2;		/* the second node's node pointer */
     void *node3;		/* the third node's node pointer */
     void *node4;		/* the fourth node's node pointer */
+    void *node5;		/* the fifth node's node pointer */
     int error;			/* error code temporary */
+    int nodeflag;		/* flag indicating 4 or 5 nodes */
     void *fast;			/* pointer to the actual instance */
     IFvalue ptemp;		/* a value structure to package resistance into */
     int waslead;		/* flag to indicate that funny unlabeled number was found */
@@ -45,6 +48,11 @@ void INP2Q(void *ckt, INPtables * tab, card * current, void *gnode)
 	LITERR("Device type BJT not supported by this binary\n");
 	return;
     }
+#ifdef TRACE
+    printf("INP2Q: Parsing '%s'\n",current->line);
+#endif
+
+    nodeflag = 0;		/*  initially specify a 4 terminal device  */
     line = current->line;
     INPgetTok(&line, &name, 1);
     INPinsert(&name, tab);
@@ -55,33 +63,66 @@ void INP2Q(void *ckt, INPtables * tab, card * current, void *gnode)
     INPgetNetTok(&line, &nname3, 1);
     INPtermInsert(ckt, &nname3, tab, &node3);
     INPgetTok(&line, &model, 1);
+
+    /*  See if 4th token after device specification is a model name  */
     if (INPlookMod(model)) {
-	/* do nothing for now */
+	/* 3-terminal device - substrate to ground */
 	node4 = gnode;
-	/* no action required */
+        INPinsert(&model, tab);
     } else {
 	nname4 = model;
 	INPtermInsert(ckt, &nname4, tab, &node4);
 	INPgetTok(&line, &model, 1);
+        /*  See if 5th token after device specification is a model name  */
+#ifdef TRACE
+        printf("INP2Q: checking for 4 node device\n");
+#endif
+        if (INPlookMod(model)) {
+	   /* 4-terminal device - special case with tnodeout flag not handled */
+           INPinsert(&model, tab);
+#ifdef ADMS
+        } else {
+	   /* 5-terminal device */
+#ifdef TRACE
+           printf("INP2Q: checking for 5 node device\n");
+#endif
+           nodeflag = 1;		/*  now specify a 5 node device  */
+           nname5 = model;
+           INPtermInsert(ckt, &nname5, tab, &node5);
+           INPgetTok(&line, &model, 1);
+           INPinsert(&model, tab);
+#endif
+        }
     }
-    INPinsert(&model, tab);
+
     current->error = INPgetMod(ckt, model, &thismodel, tab);
+#ifdef TRACE
+    printf("INP2Q: Looking up model\n");
+#endif
     if (thismodel != NULL) {
 	if((thismodel->INPmodType != INPtypelook("BJT"))
            && (thismodel->INPmodType != INPtypelook("BJT2"))
            && (thismodel->INPmodType != INPtypelook("VBIC"))
-#ifdef ADMS
-           && (thismodel->INPmodType != INPtypelook("hicum0"))
-           && (thismodel->INPmodType != INPtypelook("mextram"))
-#endif
 #ifdef CIDER
            && (thismodel->INPmodType != INPtypelook("NBJT"))
            && (thismodel->INPmodType != INPtypelook("NBJT2"))
 #endif
-         ) {
+#ifdef ADMS
+           && (thismodel->INPmodType != INPtypelook("hicum0"))
+           && (thismodel->INPmodType != INPtypelook("hicum2"))
+           && (thismodel->INPmodType != INPtypelook("mextram"))
+#endif
+          ) {
             LITERR("incorrect model type")
             return;
         }
+#ifdef ADMS
+	if (nodeflag && (thismodel->INPmodType != INPtypelook("hicum2")))
+        {
+            LITERR("Too much nodes for this model type")
+            return;
+        }
+#endif
         type = (thismodel->INPmodType);
         mdfast = (thismodel->INPmodfast);    
     } else {
@@ -96,7 +137,7 @@ void INP2Q(void *ckt, INPtables * tab, card * current, void *gnode)
     }
     
 #ifdef TRACE
-    printf ("In INP2Q, just about to dive into newInstance\n");
+    printf ("INP2Q: Just about to dive into newInstance\n");
 #endif
     
     IFC(newInstance, (ckt, mdfast, &fast, name));
@@ -104,11 +145,16 @@ void INP2Q(void *ckt, INPtables * tab, card * current, void *gnode)
     IFC(bindNode, (ckt, fast, 2, node2));
     IFC(bindNode, (ckt, fast, 3, node3));
     IFC(bindNode, (ckt, fast, 4, node4));
+    if (nodeflag) {
+      IFC(bindNode, (ckt, fast, 5, node5));
+    } else {
+      ((GENinstance *) fast)->GENnode5 = -1;
+    }
     PARSECALL((&line, ckt, type, fast, &leadval, &waslead, tab));
     if (waslead) {
 #ifdef CIDER
     if( type == INPtypelook("NBJT2") ) {
-            LITERR(" error:  no unlabelled parameter permitted on NBJT2\n")
+            LITERR(" error:  no unlabeled parameter permitted on NBJT2\n")
  	} else {
 #endif
 	ptemp.rValue = leadval;
