@@ -1,3 +1,10 @@
+2006-02-21 Paolo Nenzi <p.nenzi@ieee.org>
+
+ *   src/frontend/subckt.c, src/spicelib/parser/inp2q.c, 
+     src/spicelib/parser/inpdomod.c: Added fifth node on bipolar devices
+     (Dietmar Warning) to support newer (adms) models. Updated number of
+     nodes for subcircuits. 
+
 2006-02-19 Paolo Nenzi <p.nenzi@ieee.org>
 
  *   tests/bin/check.sh: added patch from Gary R. Van Sickle 
